Fix spacing of header

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 .container {
   display: grid;
-  grid-template: 1fr 4fr / minmax(170px, 230px) 3fr;
+  grid-template: auto 88vh / minmax(170px, 230px) 3fr;
   overflow: auto;
   align-self: center;
   margin: 20px;
@@ -64,10 +64,11 @@ body {
 
 .header {
   grid-column: 2/3;
-  min-height: 80px;
+  min-height: 60px;
   display: grid;
-  grid-template: 1fr 2fr / 1fr 1fr;
-  padding: 10px 15px;
+  grid-template-columns: 1fr 1fr;
+  padding: 0 15px;
+  align-items: start;
   /* margin-top: 10px; */
 }
 
@@ -117,8 +118,8 @@ button:focus {
 }
 
 .profile-icon {
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
 }
 
 .profile img {
@@ -127,21 +128,12 @@ button:focus {
   border-radius: 50%;
 }
 
-.greeting {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.profile-main {
-  height: 80px;
-  width: 80px;
-}
-
 /* style content area */
 
 .content {
   background-color: lightgrey;
   grid-area: 2/2/3/3;
+  min-height: 76vh;
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr auto;
